crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_071_Camerica_MiG_29_Soviet_Fighter.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-071-Camerica/MiG 29 - Soviet Fighter.nes
rom_sha256=1183d90e58b2895e0c6ae1e571e914ee275270cd63c52ed34d06dc319a4ab61b
frames=1141
fb_bytes=245760
cycles=33949794
audio_samples=836505
audio_fnv1a64=2cb3329e1fae9cf8
checkpoint f900 fb_fnv1a64=12b1c442cbad1b83
checkpoint f1100 fb_fnv1a64=a0b3bad90fa3acab
