crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_072_Jaleco72_Doraemon_World_3_by_Kiku_Doraemon_Hack.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-072-Jaleco72/Doraemon World 3 by Kiku (Doraemon Hack).nes
rom_sha256=088f684b561169a6becf4120c8a8ab77a56ac15ec39f9f48c6f2aa6e535d59ae
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
